install/kubernetes/cilium/files/policies/egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-access
  namespace: kube-system
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - kube-apiserver
    - cluster
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-access
  namespace: giantswarm
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - kube-apiserver
    - cluster
    - world
