install/kubernetes/cilium/files/policies/ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-ingress-from-host
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - host
    - remote-node
